Add Bootstrap and Media Queries

--- a/CryptoPicks/index.html
+++ b/CryptoPicks/index.html
@@ -3,66 +3,72 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Crypto Picks by Mitch</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
 <nav>
 
 </nav>
-<div class="openingDiv">
+<div class="container openingDiv">
  <h1>Best Longterm Crypto Picks</h1>
  <h1>by Mitch</h1>
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 </div>
-<div class="siteDescription">
+<div class="container siteDescription">
   <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
 </div>
-<div class="bitcoin">
+<div class="container bitcoin">
   <h2>Bitcoin (BTC)</h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API BTCUSD on trading view -->
 
 </div>
-<div class="XRP">
+<div class="container XRP">
   <h2>XRP </h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API XRP on trading view -->
 
 </div>
-<div class="tron">
+<div class="container tron">
   <h2>TRON (TRX)</h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API TRX on trading view -->
 </div>
-<div class="veChain">
+<div class="container veChain">
   <h2>VeChain (VET) </h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API VET on trading view -->
 </div>
-<div class="holoChain">
+<div class="container holoChain">
   <h2>Holochain (HOT)</h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API HOT on trading view -->
 </div>
-<div class="pundiX">
+<div class="container pundiX">
   <h2>PundiX (NPXS)</h2>
   <p>Why should this be in your portfolio: </p>
 <!-- Add API XRP on trading view -->
 
 </div>
-<div class="furtherReading">
+<div class="container furtherReading">
 <h2>Want to learn more?</h2>
 <p>Check out these websites</p>
 </div>
-<div class="Footer">
+<div class="container Footer">
   <p>Site created by: Mitchell Hamilton</p>
   <p>Copyright 2019</p>
   <a href="www.hamdev.net">hamdev.net</a>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
