Added colour to containers

--- a/CryptoPicks/index.html
+++ b/CryptoPicks/index.html
@@ -1,74 +1,109 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Crypto Picks by Mitch</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/master.css">
-  </head>
-  <body>
-<nav>
 
-</nav>
-<div class="container openingDiv">
- <h1>Best Longterm Crypto Picks</h1>
- <h1>by Mitch</h1>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-</div>
-<div class="container siteDescription">
-  <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-</div>
-<div class="container bitcoin">
-  <h2>Bitcoin (BTC)</h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API BTCUSD on trading view -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Crypto Picks by Mitch</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/master.css">
+</head>
 
-</div>
-<div class="container XRP">
-  <h2>XRP </h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API XRP on trading view -->
+<body>
 
+  <nav class="container navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand" href="#">CRYPTO PICKS by MITCH</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Other Coins</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+  </nav>
+  <div class="jumbotron container">
+  <h1 class="display-4">Welcome!</h1>
+  <p class="lead">This is a simple crypto tracker to keep track of my Favourite Cryptos.</p>
+    <p class="lead">I hope you find it useful.</p>
+  <hr class="my-4">
+  <p>Blockchain and Cryptocurrency is a rapidly growing industry that is changing the financial landscape of the world. Not all of the 5300+ cryptocurrencies out there will last, but I've put this list together of 6 cryptocurrency projects that have real long term value. This is not an exhaustive list, as there are other good projects out there. </p>
+    <!-- <p>How can I be sure? As money flows in from institutions many of them will see an initial price increase. That combined with the long term utility value of many of these coins makes crypto the best long term investments of this century.</p> -->
 </div>
-<div class="container tron">
-  <h2>TRON (TRX)</h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API TRX on trading view -->
-</div>
-<div class="container veChain">
-  <h2>VeChain (VET) </h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API VET on trading view -->
-</div>
-<div class="container holoChain">
-  <h2>Holochain (HOT)</h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API HOT on trading view -->
-</div>
-<div class="container pundiX">
-  <h2>PundiX (NPXS)</h2>
-  <p>Why should this be in your portfolio: </p>
-<!-- Add API XRP on trading view -->
+<div class="jumbotron container bg-info">
+<h1 class="display-4">These Cryptos are Worth Keeping an Eye on</h1>
+  </div>
+  <div class="container siteDescription bg-info">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+  </div>
+  <div class="container bitcoin bg-white">
+    <h2>Bitcoin (BTC)</h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API BTCUSD on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
 
-</div>
-<div class="container furtherReading">
-<h2>Want to learn more?</h2>
-<p>Check out these websites</p>
-</div>
-<div class="container Footer">
-  <p>Site created by: Mitchell Hamilton</p>
-  <p>Copyright 2019</p>
-  <a href="www.hamdev.net">hamdev.net</a>
+  </div>
+  <div class="container XRP bg-info">
+    <h2>XRP </h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API XRP on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
 
-</div>
+  </div>
+  <div class="container tron bg-white">
+    <h2>TRON (TRX)</h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API TRX on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
+  </div>
+  <div class="container veChain bg-info">
+    <h2>VeChain (VET) </h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API VET on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
+  </div>
+  <div class="container holoChain bg-white">
+    <h2>Holochain (HOT)</h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API HOT on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
+  </div>
+  <div class="container pundiX bg-info">
+    <h2>PundiX (NPXS)</h2>
+    <p>Why should this be in your portfolio: </p>
+    <!-- Add API XRP on trading view -->
+    <!-- https://github.com/tradingview/lightweight-charts -->
+    <p>Charts by Trading View</p>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  </div>
+  <div class="container furtherReading bg-secondary">
+    <h2>Want to learn more?</h2>
+    <p>Check out these websites</p>
+  <a class="btn btn-primary btn-lg" href="https://weisscrypto.com/" role="button">Weiss Ratings</a>
+  <a class="btn btn-primary btn-lg" href="https://www.coingecko.com/en" role="button">CoinGecko</a>
+  <a class="btn btn-primary btn-lg" href="https://coinpaprika.com/?currency=usd" role="button">CoinPaprika</a>
+  </div>
+  <div class="container Footer bg-dark">
+    <p>Site created by: Mitchell Hamilton</p>
+    <p>Copyright 2019</p>
+    <a href="www.hamdev.net">hamdev.net</a>
+
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
 </html>
